--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,3 +8,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 set -g default-terminal "xterm-256color"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
