--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+# unbind C-b
+# set-option -g prefix C-Space
+# bind-key C-Space send-prefix
 
 bind h select-pane -L
 bind j select-pane -D
